--- a/Solutions/pandas_2.ipynb
+++ b/Solutions/pandas_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,117 +32,24 @@
    "metadata": {},
    "source": [
     "# Assignment 2.1\n",
-    "Find the minimum, maximum and median values of all columns for each unique value in column `A` in DataFrame `df_1`"
+    "Find the minimum, maximum and median values of all columns for each unique value in column `A` in DataFrame `df_1`.The `groupby` method on a pandas DataFrame has the possibility to group by the index values by using `.groupby(level=0)`\n",
+    "<details><summary>Hint 1</summary>\n",
+    "    <p>\n",
+    "        Use the `groupby` method on a DataFrame to compute aggregate values for each unique value in a column\n",
+    "    </p>\n",
+    "</details>\n",
+    "<details><summary>Hint 2</summary>\n",
+    "    <p>\n",
+    "        It is possible to apply multiple aggregation functions to a `groupby` object by using the `agg` method and providing the function names as a list of strings\n",
+    "    </p>\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"3\" halign=\"left\">B</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">C</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>min</th>\n",
-       "      <th>max</th>\n",
-       "      <th>median</th>\n",
-       "      <th>min</th>\n",
-       "      <th>max</th>\n",
-       "      <th>median</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>-0.720589</td>\n",
-       "      <td>0.953324</td>\n",
-       "      <td>0.405453</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>-2.242685</td>\n",
-       "      <td>0.887163</td>\n",
-       "      <td>-1.190976</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>-0.334077</td>\n",
-       "      <td>1.432707</td>\n",
-       "      <td>1.150036</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>-1.546906</td>\n",
-       "      <td>0.991946</td>\n",
-       "      <td>-0.312652</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          B                       C           \n",
-       "        min       max    median min max median\n",
-       "A                                             \n",
-       "a -0.720589  0.953324  0.405453   3   6      3\n",
-       "b -2.242685  0.887163 -1.190976   0   6      3\n",
-       "c -0.334077  1.432707  1.150036   1   4      3\n",
-       "d -1.546906  0.991946 -0.312652   1   3      2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_1.groupby('A').agg(['min', 'max', 'median'])"
    ]
@@ -152,145 +59,24 @@
    "metadata": {},
    "source": [
     "# Assignment 2.2\n",
-    "For each unique combination of values from columns `A` and `C`, find the average of the values in column `B`. Return a DataFrame with columns `A`, `B_avg` and `C`, where `B_avg` holds the result of the average over the `B` column, while `A` and `C` hold the values for the unique combinations."
+    "For each unique combination of values from columns `A` and `C`, find the average of the values in column `B`. Return a DataFrame with columns `A`, `B_avg` and `C`, where `B_avg` holds the result of the average over the `B` column, while `A` and `C` hold the values for the unique combinations.\n",
+    "<details><summary>Hint 1</summary>\n",
+    "    <p>\n",
+    "        The `groupby` method on a pandas DataFrame can take a list of column names as input, and will group by every unique combination of values in the listed columns\n",
+    "    </p>\n",
+    "</details>\n",
+    "<details><summary>Hint 2</summary>\n",
+    "    <p>\n",
+    "        Applying a single aggregate function to a `groupby` object returns a Series. This series has a method `rename` for renaming it\n",
+    "    </p>\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>C</th>\n",
-       "      <th>B_avg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.042999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>a</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.953324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>b</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.190976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>b</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-2.131970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>b</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.887163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>b</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.289092</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>c</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.859588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>c</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.150036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>c</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.432707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>c</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.493540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>d</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.277480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>d</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-0.155267</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>d</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-0.636524</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    A  C     B_avg\n",
-       "0   a  3  0.042999\n",
-       "1   a  6  0.953324\n",
-       "2   b  0 -1.190976\n",
-       "3   b  3 -2.131970\n",
-       "4   b  4  0.887163\n",
-       "5   b  6  0.289092\n",
-       "6   c  1  0.859588\n",
-       "7   c  2  1.150036\n",
-       "8   c  3  1.432707\n",
-       "9   c  4  0.493540\n",
-       "10  d  1 -0.277480\n",
-       "11  d  2 -0.155267\n",
-       "12  d  3 -0.636524"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_1.groupby(['A','C'])['B'].mean().rename('B_avg').reset_index()"
    ]
@@ -315,29 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "student_id\n",
-       "1    0.250000\n",
-       "2    0.000000\n",
-       "3    0.333333\n",
-       "4    0.000000\n",
-       "5    0.333333\n",
-       "6    0.000000\n",
-       "7    0.200000\n",
-       "8    1.000000\n",
-       "Name: grade, dtype: float64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_2.groupby('student_id')['grade'].apply(lambda s: s.isin(['A', 'B']).mean())"
    ]
@@ -347,7 +113,24 @@
    "metadata": {},
    "source": [
     "# Assignment 2.4\n",
-    "The DataFrame `df_3` contains a series of columns named after the pattern `variable name`_`time lag`. Compute the average over all time lags for every variable name for every record. Return a DataFrame with the `customer_id` as index and the average of every variable as columns."
+    "The DataFrame `df_3` contains a series of columns named after the pattern `variable name`_`time lag`, e.g. the variable `A` has current time unit's value, plus that of the last three time units, stored in `A_0`, `A_1`, `A_2`, `A_3`. Compute the average over all time lags for every variable name for every record. Return a DataFrame with the `customer_id` as index and the average of every variable as columns.\n",
+    "\n",
+    "All lag variables in DataFrame ends with _ and a single number.\n",
+    "<details><summary>Hint 1</summary>\n",
+    "    <p>\n",
+    "        It is possible to group by columns by specifying `axis=1` as part of the input to the method\n",
+    "    </p>\n",
+    "</details>\n",
+    "<details><summary>Hint 2</summary>\n",
+    "    <p>\n",
+    "        One can control which rows or columns are grouped together by supplying a list of values to the `by` parameter in the method\n",
+    "    </p>\n",
+    "</details>\n",
+    "<details><summary>Hint 3</summary>\n",
+    "    <p>\n",
+    "        The python function `map` can apply a function to every element of a list\n",
+    "    </p>\n",
+    "</details>"
    ]
   },
   {
@@ -355,7 +138,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "column_groups = list(map(lambda s: s[:-2],df_3.set_index('customer_id').columns.tolist()))\n",
+    "df_3.set_index('customer_id').groupby(by=column_groups, axis=1).mean()"
+   ]
   },
   {
    "cell_type": "markdown",
