Updated pandas_2_df_2.csv with a grade date to accommodate assignment 2.5, where it needs to be coupled with pandas_2_df_4.csv on a join on valid date ranges. Updated the solutions with the problem text and code for assignment 2.5. Still needs to provide the hints.

--- a/Solutions/pandas_2.ipynb
+++ b/Solutions/pandas_2.ipynb
@@ -24,7 +24,8 @@
     "                     'B': np.random.randn(20),\n",
     "                     'C': np.random.randint(7, size=20)})\n",
     "df_2 = pd.read_csv('../data/pandas_2_df_2.csv')\n",
-    "df_3 = pd.read_csv('../data/pandas_2_df_3.csv')"
+    "df_3 = pd.read_csv('../data/pandas_2_df_3.csv')\n",
+    "df_4 = pd.read_csv('../data/pandas_2_df_4.csv')"
    ]
   },
   {
@@ -148,7 +149,9 @@
    "metadata": {},
    "source": [
     "# Assignment 2.5\n",
-    "Valid address for every record in customer table, taken from historic address table"
+    "All the grades in `df_2` has a grading date in column `grade_date`. Find out which address the grades were sent to after each grading for every student. Use the data in `df_4` to get the address on file for the grading date.\n",
+    "\n",
+    "Return a DataFrame where each row holds a student ID, the grading date and a list of course IDs graded at that date, along with the address the grades were sent to."
    ]
   },
   {
@@ -156,7 +159,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "valid_address = (df_4\n",
+    "                 .groupby('student_id')\n",
+    "                 .apply(lambda df:\n",
+    "                        pd.concat([df[['student_id', 'address', 'valid_from']],\n",
+    "                                   df['valid_from']\n",
+    "                                   .shift(-1)\n",
+    "                                   .rename('valid_to')\n",
+    "                                   .to_frame()],\n",
+    "                                  axis=1)))\n",
+    "\n",
+    "courses_per_grading = (df_2.groupby(['student_id',\n",
+    "                                     'grade_date'])['course_id']\n",
+    "                       .apply(lambda s: s.tolist())\n",
+    "                       .reset_index())\n",
+    "\n",
+    "tmp = pd.merge(left=courses_per_grading,\n",
+    "               right=valid_address,\n",
+    "               on='student_id')\n",
+    "\n",
+    "tmp.loc[(tmp['grade_date']>=tmp['valid_from'])&\n",
+    "        ((tmp['grade_date']<tmp['valid_to'])|\n",
+    "         (tmp['valid_to'].isnull())),\n",
+    "        ['student_id', 'grade_date', 'course_id', 'address']]"
+   ]
   }
  ],
  "metadata": {
