Fix data loading issue in pandas_2

--- a/pandas_2.ipynb
+++ b/pandas_2.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-22T09:02:45.114577Z",
+     "start_time": "2018-06-22T09:02:41.336577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -16,16 +21,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-22T09:04:25.262577Z",
+     "start_time": "2018-06-22T09:04:25.220577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "np.random.seed(1234)\n",
     "df_1 = pd.DataFrame({'A': ['a', 'b', 'c', 'd']*5,\n",
     "                     'B': np.random.randn(20),\n",
     "                     'C': np.random.randint(7, size=20)})\n",
-    "df_2 = pd.read_csv('../data/pandas_2_df_2.csv')\n",
-    "df_3 = pd.read_csv('../data/pandas_2_df_3.csv')\n",
-    "df_4 = pd.read_csv('../data/pandas_2_df_4.csv')"
+    "df_2 = pd.read_csv('data/pandas_2_df_2.csv')\n",
+    "df_3 = pd.read_csv('data/pandas_2_df_3.csv')\n",
+    "df_4 = pd.read_csv('data/pandas_2_df_4.csv')"
    ]
   },
   {
@@ -51,7 +61,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cols = [col ]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,6 +192,47 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
