Created exercises on missing values

--- a/Solutions/pandas_4.ipynb
+++ b/Solutions/pandas_4.ipynb
@@ -37,7 +37,7 @@
     "Calculate the average value of columns `col_1`, `col_2`, `col_3` and `col_4` for each `cust_id`. Insert a `NaN` if at least one of the values in a column is missing for that `cust_id`\n",
     "<details><summary>Hint 1</summary>\n",
     "    <p>\n",
-    "        A pandas groupby object \n",
+    "        A pandas groupby object has an `apply` method, that can apply a function to the entire grouping. This function takes in a DataFrame and returns a DataFrame\n",
     "    </p>\n",
     "</details>"
    ]
