--- a/pandas_4.ipynb
+++ b/pandas_4.ipynb
@@ -1,8 +1,17 @@
 {
+ "nbformat": 4,
+ "nbformat_minor": 2,
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(235623)\n",
+    "# Generate random data\n",
     "tmp = np.random.randn(400)\n",
+    "# Set some of the data as missing\n",
     "tmp[np.random.randint(400,size=79)] = None\n",
     "df_1 = (pd.DataFrame(np.reshape(tmp,(100,4)),\n",
     "                     columns=['col_1', 'col_2', 'col_3', 'col_4'])\n",
@@ -124,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -150,26 +159,5 @@
    "outputs": [],
    "source": []
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
