--- a/Solutions/pandas_1.ipynb
+++ b/Solutions/pandas_1.ipynb
@@ -1,4 +1,13 @@
 {
+ "nbformat": 4,
+ "nbformat_minor": 2,
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "cells": [
   {
    "cell_type": "code",
@@ -149,7 +158,7 @@
    ],
    "source": [
     "missing_in_df3 = df2.columns[~df2.columns.isin(df3.columns)].tolist()\n",
-    "missing_in_df2 = df3.columns[~df2.columns.isin(df3.columns)].tolist()\n",
+    "missing_in_df2 = df3.columns[~df3.columns.isin(df2.columns)].tolist()\n",
     "print('Columns from df2 that are not in df3:', missing_in_df3)\n",
     "print('Columns from df3 that are not in df2:', missing_in_df2)\n",
     "df3 = df3.rename(columns={missing_in_df2[0]:missing_in_df3[0]})\n",
@@ -259,26 +268,5 @@
     "df1.melt().groupby('variable')['value'].nunique()"
    ]
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
