Discovered simpler solution to exercise 1.5 and updated solution

--- a/Solutions/pandas_1.ipynb
+++ b/Solutions/pandas_1.ipynb
@@ -11,7 +11,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,20 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1.shape[1]==df2.shape[1]"
    ]
@@ -97,18 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns in df1 and df2 are identical: True\n",
-      "Columns in df1 and df2 are identical: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Columns in df1 and df2 are identical:',(df1.columns.isin(df2.columns).all() and df2.columns.isin(df1.columns).all()))\n",
     "print('Columns in df1 and df2 are identical:',(df2.columns.isin(df3.columns).all() and df3.columns.isin(df2.columns).all()))"
@@ -134,28 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns from df2 that are not in df3: ['Ni!']\n",
-      "Columns from df3 that are not in df2: ['Ecky-ecky-ecky-ecky-pikang-zoom-boing-mumble-mumble']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "missing_in_df3 = df2.columns[~df2.columns.isin(df3.columns)].tolist()\n",
     "missing_in_df2 = df3.columns[~df3.columns.isin(df2.columns)].tolist()\n",
@@ -190,27 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "We          object\n",
-       "are        float64\n",
-       "the        float64\n",
-       "Knights     object\n",
-       "Who         object\n",
-       "Say        float64\n",
-       "Ni!        float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tmp = pd.concat([df2.dtypes.rename('df2_types').to_frame(),df3.dtypes.rename('df3_types').to_frame()], axis=1)\n",
     "df3 = df3.astype({c:df2.dtypes[c] for c in tmp[tmp['df2_types']!=tmp['df3_types']].index})\n",
@@ -225,47 +168,18 @@
     "Count the number of unique values in every column of `df1` and return the results as a Series with the column name as index\n",
     "<details><summary>Hint 1</summary>\n",
     "    <p>\n",
-    "        The method `melt` on a pandas DataFrame reformats it to a long format\n",
-    "    </p>\n",
-    "</details>\n",
-    "<details><summary>Hint 2</summary>\n",
-    "    <p>\n",
-    "        Grouping by the `variable` column and selecting the `value` column, creates a Series to work on for each group\n",
-    "    </p>\n",
-    "</details>\n",
-    "<details><summary>Hint 3</summary>\n",
-    "    <p>\n",
-    "        A pandas Series has a method `nunique`, that counts the number of unique values in the Series\n",
+    "        Both pandas Series and DataFrames have a method `nunique`, that counts the number of unique values in the Series or the columns/rows of the DataFrame\n",
     "    </p>\n",
     "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "variable\n",
-       "Knights     7\n",
-       "Ni!         8\n",
-       "Say        24\n",
-       "We         18\n",
-       "Who         7\n",
-       "are        24\n",
-       "the        12\n",
-       "Name: value, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1.melt().groupby('variable')['value'].nunique()"
+    "df1.nunique()"
    ]
   }
  ]
