Fixed solution in pandas_2 and added an extra hint

--- a/Solutions/pandas_2.ipynb
+++ b/Solutions/pandas_2.ipynb
@@ -1,4 +1,13 @@
 {
+ "nbformat": 4,
+ "nbformat_minor": 2,
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "cells": [
   {
    "cell_type": "code",
@@ -97,6 +106,11 @@
     "    <p>\n",
     "        Applying a numerical aggregate function to a Boolean Series, leads pandas interpreting True as a 1 and False as a 0\n",
     "    </p>\n",
+    "</details>\n",
+    "<details><summary>Hint 3</summary>\n",
+    "    <p>\n",
+    "        Setting `student_id` as index to begin with, ensures that a `isin` can be applied to the relevant columns, while avoiding applying it to the `student_id`\n",
+    "    </p>\n",
     "</details>"
    ]
   },
@@ -106,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2.groupby('student_id')['grade'].apply(lambda s: s.isin(['A', 'B']).mean())"
+    "df_2.set_index('student_id')['grade'].isin(['A','B']).groupby(level=0).mean()"
    ]
   },
   {
@@ -140,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_groups = list(map(lambda s: s[:-2],df_3.set_index('customer_id').columns.tolist()))\n",
+    "column_groups = list(map(lambda s: s[:-2],df_3.columns.drop('customer_id').tolist()))\n",
     "df_3.set_index('customer_id').groupby(by=column_groups, axis=1).mean()"
    ]
   },
@@ -195,26 +209,5 @@
     "        ['student_id', 'grade_date', 'course_id', 'address']]"
    ]
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
