Laid out assignments for pandas_6

--- a/Solutions/pandas_6.ipynb
+++ b/Solutions/pandas_6.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[:,'2017-04-02':'2017-08-17'].groupby('Customer').sum().sum(axis=1)"
+    "df.loc[:,'2017-04-02':'2017-08-17'].groupby('Customer').sum().sum(axis=1).mean()"
    ]
   },
   {
@@ -81,7 +81,37 @@
    "metadata": {},
    "source": [
     "# Assignment 6.3\n",
-    "Create a DataFrame showing the Customer IDs as index and the month number as columns. "
+    "Find the average spend of the first three transactions (days with spend larger than zero) on a product for each customer. Create a DataFrame with the result, where the Customer ID is the index and the Product ID is the column name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment 6.4\n",
+    "Find the average days between purchases of a product for each customer. Return the result as a DataFrame with the Customer ID as index and the Product ID as column name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment 6.5\n",
+    "Create a DataFrame showing the product ID, where a customer has spent the greatest amount of money for each month. Set the Customer IDs as index and the month number as columns. "
    ]
   },
   {
@@ -115,13 +145,6 @@
     "        columns='month',\n",
     "        values='Product'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
