Finalised the code in the solution notebook

--- a/Solutions/pandas_6.ipynb
+++ b/Solutions/pandas_6.ipynb
@@ -44,7 +44,7 @@
     "# Assignment 6.1\n",
     "The DataFrame `df` holds the customers spend on a daily basis for a number of products. The column names are the individual dates in 2017, while the index values are the combinations of customer IDs and product IDs.\n",
     "\n",
-    "Find the average spend per customer between 2017-04-02 and 2017-08-17, both dates included."
+    "Find the average amount spent by a customer between 2017-04-02 and 2017-08-17, both dates included."
    ]
   },
   {
@@ -72,8 +72,7 @@
    "source": [
     "tmp = df.reset_index().melt(id_vars=df.index.names)\n",
     "tmp['month'] = tmp['variable'].dt.month\n",
-    "monthly_spend_per_prod = tmp.groupby(['Product','month'])['value'].sum()\n",
-    "monthly_spend_per_prod.reset_index().pivot(index='Product', columns='month', values='value')"
+    "tmp.pivot_table(index='Product', columns='month', values='value', aggfunc='sum')"
    ]
   },
   {
@@ -89,7 +88,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp = df.reset_index().melt(id_vars=df.index.names).sort_values('variable')\n",
+    "(tmp[tmp['value']>0]\n",
+    " .groupby(['Customer', 'Product'],\n",
+    "          as_index=False)\n",
+    " .head(3)\n",
+    " .pivot_table(values='value',\n",
+    "              index='Customer',\n",
+    "              columns='Product'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +112,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp = df.reset_index().melt(id_vars=df.index.names)\n",
+    "(tmp[tmp['value']>0]\n",
+    " .groupby(['Customer', 'Product'])\n",
+    " .apply(lambda d: (d['variable'].shift(-1)-d['variable']).dt.days.mean())\n",
+    " .rename('Days between purchases')\n",
+    " .reset_index()\n",
+    " .pivot(index='Customer',\n",
+    "        columns='Product',\n",
+    "        values='Days between purchases'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,13 +138,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tmp = df.reset_index().melt(id_vars=df.index.names)\n",
+    "tmp['month'] = tmp['variable'].dt.month\n",
+    "monthly_spend_per_prod = tmp.groupby(['Product','month'])['value'].sum().rename('Total spend').to_frame()\n",
     "cust_prod_spend_per_month = (tmp\n",
     "                             .groupby(['Customer','Product','month'])\n",
     "                             .sum()\n",
     "                             .reset_index()\n",
-    "                             .merge(monthly_spend_per_prod\n",
-    "                                    .rename('Total spend')\n",
-    "                                    .to_frame(),\n",
+    "                             .merge(monthly_spend_per_prod,\n",
     "                                    left_on = ['Product','month'],\n",
     "                                    right_index=True))\n",
     "cust_prod_spend_per_month['share'] = cust_prod_spend_per_month['value']/cust_prod_spend_per_month['Total spend']\n",
